src/mainview/style.css
@import "tailwindcss";
@import "tw-animate-css";
@import "./themes/claude.css";
@import "./themes/elegant-luxury.css";
@import "./themes/nature.css";
@import "./themes/neo-brutalism.css";
@import "./themes/quantum-rose.css";
@import "./themes/sunset-horizon.css";
@import "./themes/solar-dusk.css";
@import "./themes/twitter.css";
@import "./themes/bubblegum.css";
@import "./themes/retro-arcade.css";
@import "./styles/github-markdown.css";

/* https://tailwindcss.com/docs/dark-mode#toggling-dark-mode-manually */
@custom-variant dark (&:where(.dark, .dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);
}

@theme {
  --animate-typewriter: typewriter 1s steps(11) forwards infinite;

  @keyframes typewriter {
    to {
      left: 100%;
    }
  }
}

* {
  user-select: none;
  -webkit-user-select: none; /* Safari */

  overscroll-behavior: none;
}

body {
  margin: 0;
  font-family: var(--font-sans);
}

code {
  font-family: var(--font-mono);
}

#app {
  height: 100vh;
}

.force-select-text * {
  user-select: text !important;
  -webkit-user-select: text !important;
}
.force-select-text {
  user-select: text !important;
  -webkit-user-select: text !important;
}

